--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,16 @@
             <version>0.108</version>
         </dependency>
 
-
+        <!-- Utilities -->
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9</version>
         </dependency>
     </dependencies>
     <build>
