--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+
+
+webapp/node_modules/
+webapp/bower_components/
+webapp/.tmp/
+webapp/dist
