--- a/webapp/.jshintrc
+++ b/webapp/.jshintrc
@@ -1,23 +1,21 @@
 {
-    "node": true,
-    "esnext": true,
+    "browser": true,
     "bitwise": true,
     "camelcase": true,
     "curly": true,
     "eqeqeq": true,
     "immed": true,
-    "indent": 4,
-    "latedef": true,
+    "indent": 2,
     "newcap": true,
     "noarg": true,
     "quotmark": "single",
     "regexp": true,
     "undef": true,
-    "unused": false,
+    "unused": true,
     "strict": true,
     "trailing": true,
     "smarttabs": true,
-    "white": true,
-    "expr": true,
-    "sub": true
+    "globals": {
+        "angular": false
+    }
 }
