--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -1,24 +1,30 @@
 {
-    "name": "test",
-    "version": "0.0.0",
+    "name": "webapp",
+    "main": [
+        "/dist/webapp.min.js",
+        "/dist/webapp.min.css"
+    ],
+    "version": "0.1.0",
+    "description": "TODO",
+    "authors": [
+        "TODO"
+    ],
+    "ignore": [
+        "**/.*",
+        "package.json",
+        "klei.json",
+        "gulpfile.js",
+        "node_modules",
+        "bower_components",
+        "src"
+    ],
     "dependencies": {
-        "angular": "*",
-        "angular-resource": "*",
-        "angular-cookies": "*",
-        "angular-sanitize": "*",
-        "angular-route": "*",
-        "angular-animate": "*",
-        "angular-ui-utils": "*",
-        "angular-bootstrap": "*",
-        "angular-ui-router": "*",
-        "ng-grid": "*",
-        "jquery": "*"
+        "angular": "~1.2.14",
+        "angular-route": "~1.2.14",
+        "angular-resource": "~1.2.14",
+        "bootstrap": "~3.3.1"
     },
     "devDependencies": {
-        "angular-mocks": "*",
-        "angular-scenario": "*"
-    },
-    "overrides": {
-
+        "angular-mocks": "~1.2.14"
     }
 }
