--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,43 +1,48 @@
 {
-    "name": "test",
-    "version": "0.0.0",
-    "dependencies": {},
-    "devDependencies": {
-        "browser-sync": "~0.5.7",
-        "chalk": "^0.4.0",
-        "connect-livereload": "*",
-        "gulp": "~3.5.0",
-        "gulp-concat": "~2.1.7",
-        "gulp-connect": "^2.0.5",
-        "gulp-grunt": "~0.4.0",
-        "gulp-if": "0.0.3",
-        "gulp-imagemin": "~0.1.4",
-        "gulp-jshint": "~1.3.4",
-        "gulp-minify-css": "~0.1.0",
-        "gulp-minify-html": "~0.1.0",
-        "gulp-rimraf": "^0.1.0",
-        "gulp-sass": "^0.7.1",
-        "gulp-uglify": "~0.1.0",
-        "gulp-filter": "*",
-        "gulp-watch": "~0.3.3",
-        "gulp-zip": "~0.1.2",
-        "main-bower-files": "*",
-        "gulp-load-plugins": "^0.5.1",
-        "gulp-task-listing": "~0.3.0",
-        "jshint-stylish": "*",
-        "open": "*",
-        "protractor": "~0.16.1",
-        "run-sequence": "~0.3.6",
-        "supertest": "~0.9.0",
-        "yargs": "^1.2.1",
-        "map-stream": "*"
-    },
-    "engines": {
-        "node": ">=0.8.0"
-    },
+    "name": "webapp",
+    "version": "0.1.0",
+    "private": true,
     "scripts": {
-        "postinstall": "bower install",
-        "start": "gulp",
-        "deploy": "rsync -zvr --delete ./build USER_NAME@IP-Addr:/PATH"
+        "start": "gulp watch",
+        "test": "gulp test"
+    },
+    "dependencies": {
+    },
+    "devDependencies": {
+        "gulp": "^3.7.0",
+        "gulp-util": "^2.2.14",
+        "gulp-jshint": "^1.6.1",
+        "gulp-load-plugins": "~0.5.1",
+        "jshint-stylish": "~0.4.0",
+        "gulp-rename": "^1.2.0",
+        "main-bower-files": "^1.0.1",
+        "gulp-angular-filesort": "^1.0.3",
+        "lazypipe": "~0.2.1",
+        "gulp-cached": "^1.0.1",
+        "gulp-embedlr": "~0.5.2",
+        "gulp-livereload": "^2.1.0",
+        "gulp-header": "^1.0.2",
+        "gulp-inject": "^1.0.1",
+        "gulp-serve": "~0.2.0",
+        "gulp-concat": "^2.2.0",
+        "rimraf": "^2.2.8",
+        "gulp-stylus": "^1.0.2",
+        "nib": "^1.0.2",
+        "gulp-minify-css": "~0.3.4",
+        "gulp-csslint": "~0.1.4",
+        "event-stream": "^3.1.5",
+        "streamqueue": "~0.1.1",
+        "gulp-uglify": "~0.3.0",
+        "gulp-htmlmin": "~0.1.2",
+        "gulp-ng-html2js": "~0.1.7",
+        "gulp-ng-annotate": "~0.2.0",
+        "gulp-karma": "~0.0.4",
+        "karma-chai": "~0.1.0",
+        "karma-mocha": "~0.1.3",
+        "karma-phantomjs-launcher": "~0.1.4",
+        "karma-script-launcher": "~0.1.0",
+        "karma-chrome-launcher": "~0.1.4",
+        "karma-firefox-launcher": "~0.1.3",
+        "karma": "~0.12.16"
     }
 }
