--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,16 @@
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>ecore</artifactId>
-            <version>2.9.0</version>
-            <systemPath>${project.basedir}/lib/org.eclipse.emf.ecore-2.9.0.jar</systemPath>
+            <version>2.10.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/org.eclipse.emf.ecore_2.10.1.v20140901-1043.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>common</artifactId>
+            <version>2.10.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/org.eclipse.emf.common_2.10.1.v20140901-1043.jar</systemPath>
         </dependency>
 
     </dependencies>
