--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,21 @@
             <systemPath>${project.basedir}/lib/org.eclipse.emf.common_2.10.1.v20140901-1043.jar</systemPath>
         </dependency>
 
+        <!-- BANKING COMPONENT -->
+        <dependency>
+            <groupId>org.chalmers</groupId>
+            <artifactId>banking-admin</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/se.chalmers.cse.mdsd1415.banking.administratorRequires.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.chalmers</groupId>
+            <artifactId>banking-customer</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/se.chalmers.cse.mdsd1415.banking.customerRequires.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
